--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
     }
   </script>
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/three.js/r123/three.min.js"></script>
+  <script type="text/javascript" src="//threejs.org/examples/js/loaders/GLTFLoader.js"></script>
   <script type="text/javascript" src="//threejs.org/examples/js/controls/OrbitControls.js"></script>
   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/tweakpane@1.5.7/dist/tweakpane.min.js"></script>
   <script type="text/javascript" src="/script.js"></script>
