--- a/index.html
+++ b/index.html
@@ -1,35 +1,47 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>threejsSoftParticleDemo</title>
-  <style type="text/css">
-    .wrapper {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-    }
-    .wrapper canvas {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      display: block;
-    }
-  </style>
-</head>
-<body>
-  <div class="wrapper js-wrapper">
-    <canvas class="js-canvas"></canvas>
-  </div>
-  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/three.js/r123/three.min.js"></script>
-  <script type="text/javascript" src="//threejs.org/examples/js/loaders/GLTFLoader.js"></script>
-  <script type="text/javascript" src="//threejs.org/examples/js/controls/OrbitControls.js"></script>
-  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/tweakpane@1.5.7/dist/tweakpane.min.js"></script>
-  <script type="text/javascript" src="./script.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>threejsSoftParticleDemo</title>
+    <style type="text/css">
+      .wrapper {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
+      .wrapper canvas {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: block;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="wrapper js-wrapper">
+      <canvas class="js-canvas"></canvas>
+    </div>
+    <script
+      type="text/javascript"
+      src="//cdnjs.cloudflare.com/ajax/libs/three.js/r123/three.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="//unpkg.com/three@0.123.0/examples/js/loaders/GLTFLoader.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="//unpkg.com/three@0.123.0/examples/js/controls/OrbitControls.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="//cdn.jsdelivr.net/npm/tweakpane@1.5.7/dist/tweakpane.min.js"
+    ></script>
+    <script type="text/javascript" src="./script.js"></script>
+  </body>
 </html>
